# DAP_RP

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
QtDesigner/: DAP_Player_v01.ui
dap_player/: main.py  main_menu.py  style.qss
dap_player/database/: database.py
dap_player/database/test/: conftest.py
dap_player/ui/: DAP_Player_v01.ui  main_menu.py
dap_player/ui/style/: theme.py
dap_player/ui/widgets/: menu_list.py
dev_research/: developer_notes.md
dev_research/raspberry_pi/: cloning.md  display_setup.md  github_runner.md  overview.md  qt.md  ssh.md  venv.md
