[project]
name = "dap-rp"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "PySide6>=6.10.1",
    "SQLAlchemy>=2.0.45",
    "pytest>=0.6.0",
]

[tool.setuptools]
packages = ["dap_player"]

[project.optional-dependencies]
dev = ["black"]

[tool.black]
line-length = 120
target-version = ["py313"]